hard-gists/77a1a4d5506258f3dc1f/run.log
=== Docker Run Log for 77a1a4d5506258f3dc1f ===
Started at: Mi 29. Okt 17:17:59 CET 2025

[2025-10-29 17:17:59] START: Running container for 77a1a4d5506258f3dc1f
[2025-10-29 17:17:59] SUCCESS: Container 48a29be3481aeb6586acf1e1a2fe91224c4cb840f0a7581b1a8f5c37d0ff56d1 started for 77a1a4d5506258f3dc1f
=== Container logs for 77a1a4d5506258f3dc1f ===
  File "/snippet.py", line 28
    except CvBridgeError, e:
           ^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 77a1a4d5506258f3dc1f ===
[2025-10-29 17:18:01] INFO: Container 48a29be3481aeb6586acf1e1a2fe91224c4cb840f0a7581b1a8f5c37d0ff56d1 has stopped
